load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "listener_node",
    hdrs = ["listener_node.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//romalcpp",
        "//romalcpp/examples/ros2:msgs_cpp",
    ],
)

cc_library(
    name = "talker_node",
    hdrs = ["talker_node.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//romalcpp",
        "//romalcpp/examples/ros2:msgs_cpp",
    ],
)
