load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "listener",
    srcs = [
        "listener.cpp",
        "ros2_msg_converters.cpp",
        "ros2_msg_converters.h",
    ],
    deps = [
        "//romalcpp",
        "//romalcpp:romalcpp_ros2",
        "//romalcpp/examples/ros2_impl/romalcpp_examples_ros2_msgs:msgs_cpp",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)
