load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

# NOTE: The name of this target is used as the top-level namespace in the generated C++ code, so we
# must ensure it is unique.
ros2_interface_library(
    name = "romalcpp_examples_ros2_msgs",
    srcs = ["msg/HelloWorld.msg"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "msgs_cpp",
    visibility = ["//visibility:public"],
    deps = [":romalcpp_examples_ros2_msgs"],
)

ros2_cpp_binary(
    name = "listener",
    srcs = ["listener_main.cpp"],
    deps = [
        "//romalcpp/examples:listener_node",
        "//romalcpp/ros2_impl",
    ],
)

ros2_cpp_binary(
    name = "talker",
    srcs = ["talker_main.cpp"],
    deps = [
        "//romalcpp/examples:talker_node",
        "//romalcpp/ros2_impl",
    ],
)
