load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

# NOTE: The name of this target is used as the top-level namespace in the generated C++ code, so we
# must ensure it is unique.
ros2_interface_library(
    name = "romalcpp_examples_ros2_msgs",
    srcs = ["msg/HelloWorld.msg"],
    visibility = ["//visibility:public"],
    #deps = ["@ros2_rcl_interfaces//:builtin_interfaces"],
)

cpp_ros2_interface_library(
    name = "msgs_cpp",
    visibility = ["//visibility:public"],
    deps = [":romalcpp_examples_ros2_msgs"],
)
